fix animation z-index

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -59,7 +59,7 @@ body {
 
 		&__add-task {
             position: relative;
-            z-index: -1;
+            z-index: 1;
             margin: 0px 0px 15px 0px;
             transform: translate(0px, 35px);
             opacity: 0;
@@ -74,6 +74,7 @@ body {
 		// .to-do-list__tasks
 
 		&__tasks {
+            z-index: 2;
 		}
 }
 
